hot fix and new formats