@@ -2,29 +2,50 @@ import org.apache.pdfbox.pdmodel.PDDocument;
 import org.apache.pdfbox.text.PDFTextStripper;
 import org.apache.poi.xwpf.extractor.XWPFWordExtractor;
 import org.apache.poi.xwpf.usermodel.XWPFDocument;
+import org.apache.poi.xssf.extractor.XSSFExcelExtractor;
+import org.apache.poi.xssf.usermodel.XSSFWorkbook;
+import org.apache.poi.xslf.usermodel.XMLSlideShow;
+import org.apache.poi.sl.extractor.SlideShowExtractor;
 
 import java.io.FileInputStream;
 import java.nio.file.Files;
 import java.nio.file.Path;
 
 public class FileParser {
-    
-    public static String extractText(Path filePath) throws Exception {
-        String fileName = filePath.getFileName().toString().toLowerCase();
 
-        if (fileName.endsWith(".txt")) {
-            return Files.readString(filePath);
+    public static String extractText(Path path) throws Exception {
+        String name = path.toString().toLowerCase();
+
+        if (name.endsWith(".txt")) {
+            return new String(Files.readAllBytes(path), "UTF-8");
         }
-        else if (fileName.endsWith(".pdf")) {
-            try (PDDocument document = PDDocument.load(filePath.toFile())) {
-                PDFTextStripper stripper = new PDFTextStripper();
-                return stripper.getText(document);
+
+        if (name.endsWith(".pdf")) {
+            try (PDDocument document = PDDocument.load(path.toFile())) {
+                return new PDFTextStripper().getText(document);
             }
         }
-        else if (fileName.endsWith(".docx")) {
-            try (FileInputStream fis = new FileInputStream(filePath.toFile());
+
+        if (name.endsWith(".docx")) {
+            try (FileInputStream fis = new FileInputStream(path.toFile());
                  XWPFDocument document = new XWPFDocument(fis);
                  XWPFWordExtractor extractor = new XWPFWordExtractor(document)) {
+                return extractor.getText();
+            }
+        }
+
+        if (name.endsWith(".xlsx")) {
+            try (FileInputStream fis = new FileInputStream(path.toFile());
+                 XSSFWorkbook workbook = new XSSFWorkbook(fis);
+                 XSSFExcelExtractor extractor = new XSSFExcelExtractor(workbook)) {
+                return extractor.getText();
+            }
+        }
+
+        if (name.endsWith(".pptx")) {
+            try (FileInputStream fis = new FileInputStream(path.toFile());
+                 XMLSlideShow slideshow = new XMLSlideShow(fis);
+                 SlideShowExtractor<?, ?> extractor = new SlideShowExtractor<>(slideshow)) {
                 return extractor.getText();
             }
         }
